--- a/chart/lksg-tool-irs/templates/services.yaml
+++ b/chart/lksg-tool-irs/templates/services.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "lksg-tool-irs.fullname" . }}-irs-service
+  name: {{ include "lksg-tool-irs.fullname" . }}-service
   namespace: {{ .Values.lksg_tool_irs.namespace }}
   labels:
     {{- include "lksg-tool-irs.labels" . | nindent 4 }}
