Docker image név és verzió váltás.

--- a/chart/lksg-tool-irs/templates/ingress.yaml
+++ b/chart/lksg-tool-irs/templates/ingress.yaml
@@ -23,7 +23,7 @@ spec:
             pathType: {{ $ingressPathType }}
             backend:
               service:
-                name: {{ $fullName }}-{{ $app_name }}-service
+                name: {{ $fullName }}-service
                 port:
                   number: {{ $app.targetPort }}
           {{- end }}
